quasar/src/css/app.css
/* app global css */

/* Root setting used by result title */
:root {
  --search-input-width: min(780px, 95vw);
  /* --search-input-max-width: 95vw; */ /* already dynamicly calced in layoutStore.ts */
  --search-input-width-more: 6px;
  --result-title-font-size: 1em;
  --result-title-line-height: calc(1.5 * var(--result-title-font-size));
  --result-item-width: 240px;
  --video-embed-width: 1000px;
  --video-embed-max-width: 95vw;
  --video-embed-height: 563px;
  --video-embed-max-height: 53vw; /* 9/16*0.95 */
}

/* Toolbar */
body.body--light .q-toolbar {
  color: #0070f0;
  background: white;
}
body.body--dark .q-toolbar {
  color: #50b0f0;
  background: var(--q-dark-page);
}

/* Dark Mode Switch */
body.body--light .q-toggle {
  color: black;
}

/* Search Input */
body.body--light .search-input {
  background: white;
}
body.body--dark .search-input {
  background: var(--q-dark-page);
}

/* TV Icon */
body.body--light .tv-icon {
  filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(100%)
    contrast(100%);
}
body.body--dark .tv-icon {
  filter: invert(0%) sepia(0%) saturate(50%) hue-rotate(0deg) brightness(115%)
    contrast(100%);
}

/* Highlighted Hits */
body.body--light hit {
  font-weight: bold;
  color: #f060a0;
}
body.body--dark hit {
  font-weight: bold;
  color: #f060a0;
}
body.body--light .suggestion-owner hit,
body.body--light .result-owner-name hit {
  font-weight: bold;
  color: #f08880;
}
body.body--dark .suggestion-owner hit,
body.body--dark .result-owner-name hit {
  font-weight: bold;
  color: #f08880;
}

/* Button Dropdown */
.q-btn-dropdown--simple * + .q-btn-dropdown__arrow {
  margin-left: 4px;
}
.on-left {
  margin-right: 6px;
}
.on-right {
  margin-left: 6px;
}
.results-list-info-top .q-btn .q-icon {
  font-size: 1.1em;
}

/* Scrollbar */
body {
  overflow-y: scroll;
}

::-webkit-scrollbar {
  height: 12px;
  width: 10px;
  background: transparent;
  z-index: 12;
  overflow: visible;
}
::-webkit-scrollbar-thumb {
  width: 10px;
  background-color: rgba(128, 128, 128, 0.5);
  border-radius: 10px;
  z-index: 12;
  border: 1px solid rgba(0, 0, 0, 0);
  background-clip: padding-box;
  transition: background-color 0.25s ease-in-out;
  margin: 4px;
  min-height: 32px;
  min-width: 32px;
}
::-webkit-scrollbar-thumb:hover {
  background: #888888;
}

